# terraform-google-tls-certificate

./: .gitignore  .pre-commit-config.yaml  .talismanrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  main.tf  outputs.tf  pyproject.toml  release-please-config.json  variables.tf
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: pre-commit.yml  release-please.yml
modules/managed/: README.md  main.tf  outputs.tf  variables.tf
tests/: __init__.py  conftest.py  test_all.py  test_min.py  test_min_rsa.py
tests/examples/: conftest.py
tests/managed/: conftest.py  test_all.py  test_min.py
